alignment fixes

--- a/Styles/Toastr.css
+++ b/Styles/Toastr.css
@@ -148,9 +148,20 @@
 	background-color: #3e9b09;
 }
 
-.label{
+.label-me{
   text-shadow: 5px 4px 6px #335f6f;
   color: #205644;
+  padding-right: 6px;
+    padding-bottom: 5px;
+}
+
+.label-other{
+  text-shadow: 5px 4px 6px #335f6f;
+  color: #205644;
+  text-align: left;
+      padding-left: 6px;
+    padding-bottom: 5px;
+
 }
 
 svg text {
